docs/examples/grpc/grpcserver-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcserver
  namespace: grpcserver
spec:
  selector:
    matchLabels:
      app: grpcserver
  replicas: 1
  template:
    metadata:
      labels:
        app: grpcserver
    spec:
      containers:
      - name: grpc-demo
        image: placeexchange/grpc-demo:latest
        imagePullPolicy: Always
        ports:
        - name: grpc-api
          containerPort: 50051
      restartPolicy: Always
